force-app/main/default/objects/P2C_EnhancedListviewSortingField__c/P2C_EnhancedListviewSortingField__c.object-meta.xml
<CustomObject>
    <label>Enhanced Listview Sorting Field</label>
    <nameField>
        <label>P2C_EnhancedListviewSortingField Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhanced Listview sorting fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>