force-app/main/default/objects/P2C_EnhancedListviewSortingField__c/fields/SortingDirection__c.field-meta.xml
<CustomField>
    <fullName>SortingDirection__c</fullName>
    <label>Sorting direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
                <default>true</default>
                <label>ASC</label>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>