force-app/main/default/objects/P2C_EnhancedListviewSortingField__c/fields/SortingOrder__c.field-meta.xml
<CustomField>
    <fullName>SortingOrder__c</fullName>
    <label>Sorting order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>